--- a/config.example
+++ b/config.example
@@ -1,5 +1,11 @@
-# docs
-# https://developers.atomicdex.io/basic-docs/atomicdex/atomicdex-api.html
+#!/bin/bash
+#
+# `cp config.example config`
+#
+# Create a long random passphrase and user pass and fill in below
+#
+# @author webworker01
+# @link https://developers.atomicdex.io/basic-docs/atomicdex/atomicdex-api.html
 
 #Path to mm2 executables
 mmpath=${HOME}/atomicDEX-API/target/debug/
