--- a/config.example
+++ b/config.example
@@ -28,3 +28,6 @@ required_confirmations=2
 
 # (1|0) Enable automation helpers? e.g. automatically set required confs after enabling a coin
 automation=1
+
+# (1|0) Enable remote data from komodostats.com for price info etc
+remote=1
