Updated to latest mm beta release, add cipi's mmtools

--- a/config.example
+++ b/config.example
@@ -34,3 +34,5 @@ remote=1
 
 # Auto connect to these electrums on ./start (requires automation=1)
 auto_electrum=('KMD' 'VRSC' 'WSB' 'SOULJA')
+
+enablempm=1
