--- a/config.example
+++ b/config.example
@@ -35,4 +35,5 @@ remote=1
 # Auto connect to these electrums on ./start (requires automation=1)
 auto_electrum=('KMD' 'VRSC' 'WSB' 'SOULJA')
 
-enablempm=1
+# Enable cipi's mmtools/mpm integration
+enablempm=0
