--- a/config.example
+++ b/config.example
@@ -2,10 +2,10 @@
 #
 # `cp config.example config`
 #
-# Create a long random passphrase and user pass and fill in below
+# Create a long random passphrase and user/pass and fill in below
 #
 # @author webworker01
-# @link https://developers.atomicdex.io/basic-docs/atomicdex/atomicdex-api.html
+# @link https://developers.atomicdex.io/basic-docs/atomicdex-api-legacy/
 
 #Path to mm2 executables
 mmpath=${HOME}/atomicDEX-API/target/debug/
@@ -40,3 +40,6 @@ remote=1
 
 # Enable cipi's mmtools/mpm integration
 mpm_enable=0
+
+#Date format for logging
+datetime=$(date '+%Y-%m-%d %H:%M:%S')
